# huggingface-connector

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  verify.py
script/: .local.env  config.local.toml  config.prod.toml  config.test.toml  run.sh
src/: connector.py  connectors.py
