[project]
name="aiod-huggingface-connector"
dependencies = [
    "huggingface_hub",
    "aiondemand",
    "python-dotenv",
]
dynamic=["version"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]
